fix theme icons alignment

--- a/css/themes.css
+++ b/css/themes.css
@@ -69,7 +69,8 @@ html, body {
   cursor: pointer;
   font-size: 16px;
   display: inline-flex;
-  align-items: right;
+  align-items: center;
+  justify-content: center; 
   gap: 8px;
   padding: 6px 8px;
   border-radius: 999px;
